--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -7,3 +7,9 @@
 </ul>
 <p class="footerlogo">inspi.red</p>
 <p class="footertekst">This site is made as a schoolassignment, made with 11ty</p>
+<div class="socialsfooter">
+	<a href="https://www.facebook.com/LauraVanGorp"> <i class="fab fa-facebook"></i></a>
+	<a href="https://www.behance.net/lauravangorpa"><i class="fab fa-behance"></i></a>
+	<a href="https://www.instagram.com/lauravgraphics/"><i class="fab fa-instagram"></i></a>
+	<a href="https://dribbble.com/lauravgraphics"><i class="fab fa-dribbble"></i></a>
+</div>
