--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -145,3 +145,10 @@
 	  {% endfor %}
 	</ul>
 </nav>
+
+<div class="socials">
+	<a href="https://www.facebook.com/LauraVanGorp"> <i class="fab fa-facebook"></i></a>
+	<a href="https://www.behance.net/lauravangorpa"><i class="fab fa-behance"></i></a>
+	<a href="https://www.instagram.com/lauravgraphics/"><i class="fab fa-instagram"></i></a>
+	<a href="https://dribbble.com/lauravgraphics"><i class="fab fa-dribbble"></i></a>
+</div>
