--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/reset_plus.css">
 		<link rel="stylesheet" type="text/css" href="/css/stijl.css">
 		<script src="/js/script.js" defer></script>
+    <script src="https://kit.fontawesome.com/4b567f9bd6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ptc3djs.css">
     <link href='https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap' rel='stylesheet'>
 		<style>{{ custom_css }}</style>
