--- a/src/css/stijl.css
+++ b/src/css/stijl.css
@@ -1,7 +1,7 @@
 
 
 main p {
-	line-height: 3rem;
+	line-height: 3.3rem;
 	margin-bottom: 3rem;
 }
 
@@ -21,12 +21,21 @@ ul.taglist, ul.postlist {
 
 ul.taglist li, ul.postlist li{
 	margin-bottom: 3rem;
+
 }
 
 ul.taglist li a, ul.postlist li a {
 	background-color: #38373e;
-	color: #faf0e4;
+	color: white;
 	padding: .75rem;
+	transition: 1s;
+}
+
+ul.taglist li a:hover, ul.postlist li a:hover {
+	background-color:white;
+	color: #38373e;
+	padding: .75rem;
+	border: 1px solid #38373e;
 }
 
 
@@ -42,6 +51,48 @@ nav.pagination a:hover {
 	color: white;
 	background-color: black;
 }
+
+
+.socials{
+  margin-bottom: 2rem;
+  margin-left: 1.6rem;
+	position: absolute;
+	right: 1rem;
+	top: 11.5rem;
+	z-index: 1000;
+}
+
+.socials i{
+  font-size: 1.7rem;
+  color: #292627;
+  margin-left: 0.5rem;
+  transition: 1s;
+}
+
+.socials i:hover{
+  transform: scale(1.1);
+  cursor:pointer;
+	color: grey;
+}
+
+
+.socialsfooter{
+	margin-top: 1rem;
+	z-index: 1000;
+}
+
+.socialsfooter i{
+  font-size: 1.7rem;
+  color: #292627;
+  transition: 1s;
+}
+
+.socialsfooter i:hover{
+  transform: scale(1.1);
+  cursor:pointer;
+	color: grey;
+}
+
 
 /* eigen code */
 
@@ -71,6 +122,7 @@ nav {
 	text-align: center;
 	position: relative;
 	z-index: 100;
+	padding-bottom: 1rem;
 }
 
 nav a {
@@ -125,6 +177,16 @@ main h2 {
 	text-transform: uppercase;
 	}
 
+.blogfeedtitel{
+	font-size: 3rem;
+	font-weight: 600;
+	margin-bottom: 3rem;
+	padding-top: 3rem;
+	font-weight: 500;
+	font-family: 'Libre Caslon Display', serif;
+	font-style: normal;
+	text-transform: uppercase;
+}
 
 main p {
 	line-height: 3rem;
@@ -219,7 +281,7 @@ main h4 {
 	}
 
 	.bloglist li{
-		margin-bottom: 5rem;
+		margin-bottom: 8rem;
 	}
 
 
@@ -279,7 +341,7 @@ main h4 {
 }
 
 .naam:hover{
-	color: orange;
+	color: #FDEB05;
 }
 
 .footerlogo{
@@ -480,6 +542,11 @@ header nav ul li {
 		top: 0rem;
 	}
 
+	.socials{
+		right: 1rem;
+		top: 6rem;
+	}
+
 	.works{
 		column-count: 3;
 		gap: 60px;
@@ -525,7 +592,7 @@ header nav ul li {
 					line-height: 2.4rem;}
 
 					main p {
-						line-height: 2rem;
+						line-height: 2.5rem;
 						margin-bottom: 1rem;
 						font-size: 1.9rem;
 					}
@@ -585,8 +652,27 @@ header nav ul li {
 			border-bottom: none;
 		}
 
+		.socials{
+			right: 3rem;
+			top: 2.3rem;
+		}
+
+		.socialsfooter{
+			position: absolute;
+			right: 3rem;
+			z-index: 1000;
+			top: 1.1rem;
+		}
+
+
 		.leeg{
 			font-size: 3rem;
+		}
+
+		ul.taglist li, ul.postlist li{
+			margin-bottom: 3rem;
+			display: inline;
+			margin-right: 2rem;
 		}
 
 		.homepagetitel {
@@ -602,8 +688,40 @@ header nav ul li {
 			z-index: 100;
 		}
 
+		main h2 {
+			font-size: 5rem;
+			font-weight: 600;
+			margin-bottom: 3rem;
+			padding-top: 3rem;
+			font-weight: 500;
+			font-family: 'Libre Caslon Display', serif;
+			font-style: normal;
+			text-transform: uppercase;
+			text-align: center;
+			}
+
+			.intro{
+				text-align: center;
+			}
+
+		.blogfeedtitel{
+			font-size: 3rem;
+			font-weight: 600;
+			margin-bottom: 3rem;
+			padding-top: 3rem;
+			font-weight: 500;
+			font-family: 'Libre Caslon Display', serif;
+			font-style: normal;
+			text-transform: uppercase;
+		}
+
 		footer ul {
 			right: 42%;
 		}
+
+
+				.naam{
+					margin-left: 36%;
+				}
 
 }
