--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -14,7 +14,7 @@
 		<style>{{ custom_css }}</style>
   </head>
   <body>
-		<header>
+		<header class="fixed">
 			{% include "partials/header.html" %}
 		</header>
     <main>
